[package]
name = "rtas"
version = "0.1.0"
authors = ["Thierry Berger <thierry.berger@ohm-games.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = {version = "0.3.0"}
bevy_prototype_lyon = "0.1.3"
bevy_rapier2d = { version="0.5.0"}
rand = "0.7.3"
mapgen = "0.4.1"