[package]
name = "rtas"
version = "0.1.0"
authors = ["Thierry Berger <thierry.berger@ohm-games.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = {version = "0.7"}
bevy_prototype_lyon = "0.5.0"
bevy_rapier2d = { version="*", git = "https://github.com/dimforge/bevy_rapier.git", branch = "rewrite"}
rand = "0.8.5"
mapgen = "0.5.2"

[patch.crates-io]
rapier2d = { git = 'https://github.com/dimforge/rapier.git'}
parry2d = { git = 'https://github.com/dimforge/parry.git' }
nalgebra = { git = 'https://github.com/dimforge/nalgebra.git' }

[profile.dev]
opt-level = 1
incremental = true

[profile.dev.package."*"]
opt-level = 3