[package]
name = "rtas"
version = "0.1.0"
authors = ["Thierry Berger <thierry.berger@ohm-games.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = {version = "0.8"}
bevy_prototype_lyon = "0.6.0"
bevy_rapier2d = { version="0.16"}
rand = "0.8.5"
mapgen = "0.5.2"
bevy-inspector-egui = "*"


[profile.dev]
opt-level = 1
incremental = true

[profile.dev.package."*"]
opt-level = 3